# astro

./: .gitignore  package-lock.json  package.json  vite.config.js
src/: main.jsx  styles.css
src-tauri/: Cargo.toml  save_data.xlsx  tauri.conf.json
src-tauri/src/: main.rs
src/components/: index.js
src/components/TableLine/: TableLine.scss  index.jsx
src/containers/: index.js
src/containers/Auto/: Auto.scss  index.jsx
src/containers/ConfigModal/: ConfigModal.scss  index.jsx
src/containers/Main/: Main.scss  index.jsx
src/containers/Manual/: Manual.scss  index.jsx
src/containers/PortControl/: PortControl.scss  index.jsx
src/containers/ScanControl/: ScanControl.scss  index.jsx
src/containers/Table/: Table.scss  index.jsx
src/containers/TableControl/: TableControl.scss  index.jsx
src/containers/TimeControl/: TimeControl.scss  index.jsx
src/redux/: action.js  actionTypes.js  selectors.js  store.js
src/redux/reducers/: index.js  main.js
src/styles/: consts.scss  index.scss
src/utils/: index.js
